--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -65,3 +65,10 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: TaskPlannerBundle\Entity\User
+services:
+    fos_user.doctrine_registy:
+        alias: doctrine
