--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,7 +2,5 @@ task_planner:
     resource: "@TaskPlannerBundle/Controller/"
     type:     annotation
     prefix:   /
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
